[package]
name = "amdo"
version = "0.1.1"
edition = "2021"
authors = ["Daniel <animcuil@gmail.com>"]
description = "await-modify-do is a TUI application that runs an arbitrary command on save in working directory."
license = "MIT"
repository = "https://github.com/DanielHauge/await-modify-do"
readme = "README.md"

[dependencies]
crossbeam = "0.8.0"
devicons = "0.6.11"
notify = "7.0.0"
ratatui = { version = "0.28.0", features = ["all-widgets"]}
which = "7.0.0"
sysinfo = "0.32.1"
